# cmake-sfml-project

./: CMakeLists.txt  README.md
docs/: cmake.md  download.md  git.md  vs.md  xcode.md
